[package]
name = "quantumfs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
blake3 = "1.5"
lz4 = "1.24"
bincode = "1.3"
hex = "0.4"
io-uring-layer = { path = "../io-uring-layer" }

[features]
default = []
io_uring = ["io-uring-layer/io_uring"]
